# IGVC_ROS2

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TODO.md  avros.repos
docs/: CHANGELOG_2026-04-23.md  CHANGELOG_2026-04-24.md  CHANGELOG_2026-04-25.md  CHANGELOG_2026-04-27.md  CHANGELOG_2026-04-27_field.md  CHANGELOG_2026-04-28.md  CHANGELOG_2026-04-29.md  PLAN_perception_phase4_phase5.md  REALSENSE_SETUP.md  field_test_lane_perception.md  foxglove_layout.json  perception_latency_investigation.tex
firmware/teensy_diag/: teensy_diag.ino
firmware/teensy_diff_drive/: BRING_UP.md  CLAUDE.md  FINDINGS.md  phase1_handspin.py  phase2_baseline.py  phase3_stiction.py  phase4_duty_sweep.py  phase5_stability.py  phase6_pid_tune.py  phase6b_pid_fine_tune.py  phase6c_pid_verify.py  phase7_burn_verify.py  teensy_bridge.py  test.py  (+1 more)
scripts/: apply_kiwicampus_patches.sh
src/avros_perception/: package.xml  setup.py
src/avros_perception/avros_perception/: lane_detector_node.py  perception_node.py
src/avros_perception/avros_perception/pipelines/: __init__.py  base.py  hsv.py  stub.py
src/avros_perception/avros_perception/utils/: class_map.py
src/avros_perception/config/: class_map.yaml  perception.yaml
src/avros_perception/launch/: perception.launch.py
src/avros_perception/test/: conftest.py  test_copyright.py
src/avros_perception/test/launch/: test_perception_launch.py
src/avros_perception/test/unit/: test_hsv_live_tuning.py  test_hsv_pipeline.py  test_hsv_thresholds.py  test_label_info.py  test_pipeline_interface.py  test_stub_pipeline.py  test_sync_slop.py
(+42 files in other folders)
